# identity/docs/swagger.json
@@ -119,10 +119,14 @@
         "controllers.UserSignupInput": {
             "type": "object",
             "required": [
+                "is_admin",
                 "password",
                 "username"
             ],
             "properties": {
+                "is_admin": {
+                    "type": "boolean"
+                },
                 "password": {
                     "type": "string"
                 },
